<resources>
    <string name="app_name">Instagram</string>
    <string name="posts">POSTS</string>
    <string name="followers">FOLLOWERS</string>
    <string name="followings">FOLLOWINGS</string>
    <string name="editProfile">Edit Profile</string>
    <string name="userName">sshmotya</string>
    <string name="imOptions">options</string>
    <string name="bio">UA | 🇺🇦
👨‍💻 Music Producer
📀Credits: @marnionstylist @deionbexby</string>
    <string name="role">Producer</string>
    <string name="fullName">Dan Shvydko</string>
    <string name="numberOfPosts">4</string>
    <string name="numberOfFollowers">170</string>
    <string name="numberOfFollowings">98</string>
    <string name="save">SAVE</string>
    <string name="enter_new_name_hint">Enter name here</string>
    <string name="current_name_message">Your current name:</string>
    <string name="your_current_username">Your current username:</string>
    <string name="change_your_name_header">Change your name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="bt_log_in">Log In</string>
    <string name="log_in">Log In</string>
</resources>
