<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            android:id="@+id/toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text = "@string/userName"
                    android:textSize = "18sp"
                    android:maxLines = "1"
                    android:textStyle = "bold"
                    android:id="@+id/username"
                    android:textColor="@color/colorPrimaryDark"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/options"
                        android:src="@drawable/ic_options"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="15dp"
                        android:contentDescription="options">

                    </ImageView>


            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/top"
                android:padding="15dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageProfile"
                android:layout_width="80dp"
                android:layout_height="80dp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/tvPosts"
                                android:textColor="@color/colorPrimaryDark"
                                android:layout_gravity="center"
                                android:textSize="18sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/posts"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="35dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/tvFollowers"
                                android:textColor="@color/colorPrimaryDark"
                                android:layout_gravity="center"
                                android:textSize="18sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/followers"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="35dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/tvFollowings"
                                android:textColor="@color/colorPrimaryDark"
                                android:layout_gravity="center"
                                android:textSize="18sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/followings"/>

                        </LinearLayout>

                    </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/editProfile"
                    android:id="@+id/editProfile"/>
            </LinearLayout>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:id="@+id/mid"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:id="@+id/tvFullName"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/tvBio"
                    android:maxLines="5"
                    android:textColor="@color/colorAccent"/>


            </LinearLayout>


    </ScrollView>

</RelativeLayout>